fix: overlapping breadcrumbs in objectbrowser

--- a/src/theme/_cms-ui.scss
+++ b/src/theme/_cms-ui.scss
@@ -258,6 +258,8 @@ body.cms-ui {
 
         a.section {
           position: relative;
+          overflow: hidden;
+          text-overflow: ellipsis; //fix per breadcrumb troppo lunghi
 
           &:not(:last-of-type) {
             max-width: 33.33%;
